src/tests/text_document/snapshots/texlab__tests__text_document__completion__theorem_begin.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\newtheorem{lemma}{Lemma}\n%SRC \\begin{lem \n%CUR         ^\n%1.1        ^^^\"#)?"
---
[
  {
    "detail": "user-defined",
    "kind": 1,
    "label": "lemma",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "lemma"
    }
  }
]
