src/tests/text_document/snapshots/texlab__tests__text_document__completion__tikz_library_closed_brace.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\usepgflibrary{}\n%CUR                ^\"#)?"
---
[
  {
    "kind": 1,
    "label": "arrows",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "arrows"
    }
  },
  {
    "kind": 1,
    "label": "arrows.meta",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "arrows.meta"
    }
  },
  {
    "kind": 1,
    "label": "arrows.spaced",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "arrows.spaced"
    }
  },
  {
    "kind": 1,
    "label": "curvilinear",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "curvilinear"
    }
  },
  {
    "kind": 1,
    "label": "datavisualization.barcharts",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "datavisualization.barcharts"
    }
  }
]
